// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppBar Main app bar 1`] = `
<div
  className="ButtonAppBar-root-1"
>
  <header
    className="MuiPaper-root-14 MuiPaper-shadow4-20 MuiAppBar-root-7 MuiAppBar-positionStatic-10 MuiAppBar-colorPrimary-12 ButtonAppBar-appBar-5"
  >
    <div
      className="MuiToolbar-root-41 MuiToolbar-gutters-42"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-52 MuiIconButton-root-43 MuiIconButton-colorContrast-45 ButtonAppBar-menuButton-3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-49"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-54 MuiIconButton-icon-50"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-55"
        />
      </button>
      <h1
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiTypography-colorInherit-81 ButtonAppBar-flex-2"
      >
        MIWF
      </h1>
      <a
        className="MuiButtonBase-root-52 MuiButton-root-86 MuiButton-flatContrast-91 ButtonAppBar-logoutButton-6"
        href="/logout"
        id="logout"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiButton-label-88"
        >
          Logout
        </span>
        <span
          className="MuiTouchRipple-root-55"
        />
      </a>
    </div>
  </header>
</div>
`;

exports[`Storyshots Cards Content card 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div>
    <h1>
       Content 
    </h1>
  </div>
</div>
`;

exports[`Storyshots Cards Simple card 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-105 MuiCardHeader-root-100"
  >
    <div
      className="MuiCardHeader-content-102"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-103"
      >
        Title
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-104"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-105"
  >
    fdsa
  </div>
</div>
`;

exports[`Storyshots HighlightBox Account Total 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-105 MuiCardHeader-root-100"
  >
    <div
      className="MuiCardHeader-content-102"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-103"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-104"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-105"
  >
    <h1>
      $7,749.34
    </h1>
    <hr
      className="MuiDivider-root-338 MuiDivider-default-339"
    />
    <ul
      className="MuiList-root-343 MuiList-padding-344"
    >
      <li
        className="MuiListItem-root-347 MuiListItem-gutters-354 MuiListItem-default-350"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-357"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Annulized Percentage Return 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-105 MuiCardHeader-root-100"
  >
    <div
      className="MuiCardHeader-content-102"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-103"
      >
        Annulized Percentage Return
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-104"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-105"
  >
    <h1>
      3.75%
    </h1>
    <hr
      className="MuiDivider-root-338 MuiDivider-default-339"
    />
    <ul
      className="MuiList-root-343 MuiList-padding-344"
    >
      <li
        className="MuiListItem-root-347 MuiListItem-gutters-354 MuiListItem-default-350"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-357"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Playground 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-105 MuiCardHeader-root-100"
  >
    <div
      className="MuiCardHeader-content-102"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-103"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-104"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-105"
  >
    <h1>
      $1234.56
    </h1>
    <hr
      className="MuiDivider-root-338 MuiDivider-default-339"
    />
    <ul
      className="MuiList-root-343 MuiList-padding-344"
    >
      <li
        className="MuiListItem-root-347 MuiListItem-gutters-354 MuiListItem-default-350"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-357"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots InvestBucket Playground 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-105 MuiCardHeader-root-100"
  >
    <div
      className="MuiCardHeader-content-102"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-103"
      >
        Risk 1
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-104"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-105"
  >
    <ul
      className="MuiList-root-343 MuiList-padding-344"
    >
      <li
        className="MuiListItem-root-347 MuiListItem-gutters-354 MuiListItem-default-350"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-54 MuiListItemIcon-root-362"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
          />
        </svg>
        <div
          autoFocus={true}
          className="MuiListItemText-root-357"
          onClick={[Function]}
        >
          <h3
            className="MuiTypography-root-62 MuiTypography-subheading-69 MuiListItemText-text-360"
          >
            Good to get started
          </h3>
        </div>
      </li>
      <li
        className="MuiListItem-root-347 MuiListItem-gutters-354 MuiListItem-default-350"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-54 MuiListItemIcon-root-362"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <div
          className="MuiFormControl-root-363"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          required={false}
        >
          <div
            className="MuiInput-root-367 MuiInput-formControl-368 MuiInput-inkbar-369 MuiInput-underline-375"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-371 MuiInput-inputSingleline-378"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value="Low risk"
            />
          </div>
        </div>
      </li>
      <li
        className="MuiListItem-root-347 MuiListItem-gutters-354 MuiListItem-default-350"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-54 MuiListItemIcon-root-362"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
          />
        </svg>
        <div
          autoFocus={true}
          className="MuiListItemText-root-357"
          onClick={[Function]}
        >
          <h3
            className="MuiTypography-root-62 MuiTypography-subheading-69 MuiListItemText-text-360"
          >
            Low reward
          </h3>
        </div>
      </li>
    </ul>
    <button
      aria-label="add"
      className="MuiButtonBase-root-52 MuiButton-root-86 MuiButton-raised-93 MuiButton-fab-99 MuiButton-raisedPrimary-95"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-88"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-54"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-55"
      />
    </button>
  </div>
  <div
    className="MuiCardActions-root-382"
  >
    <button
      className="MuiButtonBase-root-52 MuiButton-root-86 MuiButton-flatPrimary-89 MuiButton-dense-87 MuiCardActions-actionSpacing-383"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-88"
      >
        Invest
      </span>
      <span
        className="MuiTouchRipple-root-55"
      />
    </button>
    <button
      className="MuiButtonBase-root-52 MuiButton-root-86 MuiButton-flatPrimary-89 MuiButton-dense-87 MuiCardActions-actionSpacing-383"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-88"
      >
        Learn More
      </span>
      <span
        className="MuiTouchRipple-root-55"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Loading Linear 1`] = `
<div>
  <div
    className="MuiCircularProgress-root-315 MuiCircularProgress-primaryColor-316"
    role="progressbar"
    style={
      Object {
        "height": 100,
        "width": 100,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-318 MuiCircularProgress-indeterminateSvg-319"
      viewBox="0 0 100 100"
    >
      <circle
        className="MuiCircularProgress-circle-320 MuiCircularProgress-indeterminateCircle-321"
        cx={50}
        cy={50}
        fill="none"
        r={48.2}
        strokeMiterlimit="20"
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Page Test page 1`] = `
<div>
  <div
    className="ButtonAppBar-root-1"
  >
    <header
      className="MuiPaper-root-113 MuiPaper-shadow4-119 MuiAppBar-root-106 MuiAppBar-positionStatic-109 MuiAppBar-colorPrimary-111 ButtonAppBar-appBar-5"
    >
      <div
        className="MuiToolbar-root-140 MuiToolbar-gutters-141"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-151 MuiIconButton-root-142 MuiIconButton-colorContrast-144 ButtonAppBar-menuButton-3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-148"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-153 MuiIconButton-icon-149"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-154"
          />
        </button>
        <h1
          className="MuiTypography-root-161 MuiTypography-headline-166 MuiTypography-colorInherit-180 ButtonAppBar-flex-2"
        >
          MIWF
        </h1>
        <a
          className="MuiButtonBase-root-151 MuiButton-root-185 MuiButton-flatContrast-190 ButtonAppBar-logoutButton-6"
          href="/logout"
          id="logout"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
        >
          <span
            className="MuiButton-label-187"
          >
            Logout
          </span>
          <span
            className="MuiTouchRipple-root-154"
          />
        </a>
      </div>
    </header>
  </div>
  <div
    style={
      Object {
        "margin": 10,
      }
    }
  >
    <div
      className="MuiGrid-typeContainer-199 MuiGrid-spacing-xs-16-214"
    >
      <div
        className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
      >
        <div
          className="MuiGrid-typeContainer-199 MuiGrid-spacing-xs-16-214"
        >
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Current balance
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <h1>
                  $1300
                </h1>
                <hr
                  className="MuiDivider-root-288 MuiDivider-default-289"
                />
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Total Income
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <h1>
                  $300
                </h1>
                <hr
                  className="MuiDivider-root-288 MuiDivider-default-289"
                />
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Total Expenditures
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <h1>
                  $250
                </h1>
                <hr
                  className="MuiDivider-root-288 MuiDivider-default-289"
                />
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Another box
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <h1>
                  $1000
                </h1>
                <hr
                  className="MuiDivider-root-288 MuiDivider-default-289"
                />
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
      >
        <div
          className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
        >
          <div
            className="my-pretty-chart-container"
          >
            <div
              id="chart"
              style={
                Object {
                  "height": "450px",
                  "width": "100%",
                }
              }
            >
              <div>
                Rendering Chart
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
      >
        <div
          className="MuiGrid-typeContainer-199 MuiGrid-spacing-xs-16-214"
        >
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Pumpkin
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <h1>
                  $13
                </h1>
                <hr
                  className="MuiDivider-root-288 MuiDivider-default-289"
                />
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Fixed monthly
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <h1>
                  $200
                </h1>
                <hr
                  className="MuiDivider-root-288 MuiDivider-default-289"
                />
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Invest Income
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <h1>
                  10%
                </h1>
                <hr
                  className="MuiDivider-root-288 MuiDivider-default-289"
                />
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Expendable cash
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <h1>
                  5%
                </h1>
                <hr
                  className="MuiDivider-root-288 MuiDivider-default-289"
                />
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-6-236"
      >
        <div
          className="MuiGrid-typeContainer-199 MuiGrid-spacing-xs-16-214"
        >
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-8-238 MuiGrid-grid-lg-4-260"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Risk 1
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                >
                  <li
                    className="MuiListItem-root-297 MuiListItem-gutters-304 MuiListItem-default-300"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-153 MuiListItemIcon-root-307"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-308"
                    >
                      <h3
                        className="MuiTypography-root-161 MuiTypography-subheading-168 MuiListItemText-text-311"
                      >
                        Good to get started
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-297 MuiListItem-gutters-304 MuiListItem-default-300"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-153 MuiListItemIcon-root-307"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-308"
                    >
                      <h3
                        className="MuiTypography-root-161 MuiTypography-subheading-168 MuiListItemText-text-311"
                      >
                        Low risk
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-297 MuiListItem-gutters-304 MuiListItem-default-300"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-153 MuiListItemIcon-root-307"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-308"
                    >
                      <h3
                        className="MuiTypography-root-161 MuiTypography-subheading-168 MuiListItemText-text-311"
                      >
                        Low reward
                      </h3>
                    </div>
                  </li>
                </ul>
              </div>
              <div
                className="MuiCardActions-root-313"
              >
                <button
                  className="MuiButtonBase-root-151 MuiButton-root-185 MuiButton-flatPrimary-188 MuiButton-dense-186 MuiCardActions-actionSpacing-314"
                  disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-187"
                  >
                    Invest
                  </span>
                  <span
                    className="MuiTouchRipple-root-154"
                  />
                </button>
                <button
                  className="MuiButtonBase-root-151 MuiButton-root-185 MuiButton-flatPrimary-188 MuiButton-dense-186 MuiCardActions-actionSpacing-314"
                  disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-187"
                  >
                    Learn More
                  </span>
                  <span
                    className="MuiTouchRipple-root-154"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-8-238 MuiGrid-grid-lg-4-260"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Risk 2
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                >
                  <li
                    className="MuiListItem-root-297 MuiListItem-gutters-304 MuiListItem-default-300"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-153 MuiListItemIcon-root-307"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-308"
                    >
                      <h3
                        className="MuiTypography-root-161 MuiTypography-subheading-168 MuiListItemText-text-311"
                      >
                        Allows you to take more risk
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-297 MuiListItem-gutters-304 MuiListItem-default-300"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-153 MuiListItemIcon-root-307"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-308"
                    >
                      <h3
                        className="MuiTypography-root-161 MuiTypography-subheading-168 MuiListItemText-text-311"
                      >
                        Pays significant rewards
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-297 MuiListItem-gutters-304 MuiListItem-default-300"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-153 MuiListItemIcon-root-307"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-308"
                    >
                      <h3
                        className="MuiTypography-root-161 MuiTypography-subheading-168 MuiListItemText-text-311"
                      >
                        You might lose some money
                      </h3>
                    </div>
                  </li>
                </ul>
              </div>
              <div
                className="MuiCardActions-root-313"
              >
                <button
                  className="MuiButtonBase-root-151 MuiButton-root-185 MuiButton-flatPrimary-188 MuiButton-dense-186 MuiCardActions-actionSpacing-314"
                  disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-187"
                  >
                    Invest
                  </span>
                  <span
                    className="MuiTouchRipple-root-154"
                  />
                </button>
                <button
                  className="MuiButtonBase-root-151 MuiButton-root-185 MuiButton-flatPrimary-188 MuiButton-dense-186 MuiCardActions-actionSpacing-314"
                  disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-187"
                  >
                    Learn More
                  </span>
                  <span
                    className="MuiTouchRipple-root-154"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-200 MuiGrid-grid-xs-12-229 MuiGrid-grid-sm-8-238 MuiGrid-grid-lg-4-260"
          >
            <div
              className="MuiPaper-root-113 MuiPaper-shadow2-117 MuiPaper-rounded-114"
            >
              <div
                className="MuiCardContent-root-287 MuiCardHeader-root-282"
              >
                <div
                  className="MuiCardHeader-content-284"
                >
                  <span
                    className="MuiTypography-root-161 MuiTypography-headline-166 MuiCardHeader-title-285"
                  >
                    Risk 3
                  </span>
                  <span
                    className="MuiTypography-root-161 MuiTypography-body1-170 MuiTypography-colorSecondary-182 MuiCardHeader-subheader-286"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-287"
              >
                <ul
                  className="MuiList-root-293 MuiList-padding-294"
                >
                  <li
                    className="MuiListItem-root-297 MuiListItem-gutters-304 MuiListItem-default-300"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-153 MuiListItemIcon-root-307"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-308"
                    >
                      <h3
                        className="MuiTypography-root-161 MuiTypography-subheading-168 MuiListItemText-text-311"
                      >
                        $$$
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-297 MuiListItem-gutters-304 MuiListItem-default-300"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-153 MuiListItemIcon-root-307"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-308"
                    >
                      <h3
                        className="MuiTypography-root-161 MuiTypography-subheading-168 MuiListItemText-text-311"
                      >
                        More $$$
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-297 MuiListItem-gutters-304 MuiListItem-default-300"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-153 MuiListItemIcon-root-307"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-308"
                    >
                      <h3
                        className="MuiTypography-root-161 MuiTypography-subheading-168 MuiListItemText-text-311"
                      >
                        You're fucking insane of you invest in this
                      </h3>
                    </div>
                  </li>
                </ul>
              </div>
              <div
                className="MuiCardActions-root-313"
              >
                <button
                  className="MuiButtonBase-root-151 MuiButton-root-185 MuiButton-flatPrimary-188 MuiButton-dense-186 MuiCardActions-actionSpacing-314"
                  disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-187"
                  >
                    Invest
                  </span>
                  <span
                    className="MuiTouchRipple-root-154"
                  />
                </button>
                <button
                  className="MuiButtonBase-root-151 MuiButton-root-185 MuiButton-flatPrimary-188 MuiButton-dense-186 MuiCardActions-actionSpacing-314"
                  disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-187"
                  >
                    Learn More
                  </span>
                  <span
                    className="MuiTouchRipple-root-154"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Saldo Playground 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-105 MuiCardHeader-root-100"
  >
    <div
      className="MuiCardHeader-content-102"
    >
      <span
        className="MuiTypography-root-62 MuiTypography-headline-67 MuiCardHeader-title-103"
      >
        Saldo
      </span>
      <span
        className="MuiTypography-root-62 MuiTypography-body1-71 MuiTypography-colorSecondary-83 MuiCardHeader-subheader-104"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-105"
  >
    <table
      className="MuiTable-root-323"
    >
      <tbody
        className="MuiTableBody-root-324"
      >
        <tr
          className="MuiTableRow-root-325"
        >
          <td
            className="MuiTableCell-root-331 withStyles-TableCell--root-330 MuiTableCell-paddingDefault-334"
          >
            investedSharesValue
          </td>
          <td
            className="MuiTableCell-root-331 withStyles-TableCell--root-330 MuiTableCell-paddingDefault-334"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $700.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-325"
        >
          <td
            className="MuiTableCell-root-331 withStyles-TableCell--root-330 MuiTableCell-paddingDefault-334"
          >
            earnedSharesValue
          </td>
          <td
            className="MuiTableCell-root-331 withStyles-TableCell--root-330 MuiTableCell-paddingDefault-334"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $74.93
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-325"
        >
          <td
            className="MuiTableCell-root-331 withStyles-TableCell--root-330 MuiTableCell-paddingDefault-334"
          >
            bonusSharesValue
          </td>
          <td
            className="MuiTableCell-root-331 withStyles-TableCell--root-330 MuiTableCell-paddingDefault-334"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-325"
        >
          <td
            className="MuiTableCell-root-331 MuiTableCell-paddingDefault-334"
          >
            reinvestedSharesValue
          </td>
          <td
            className="MuiTableCell-root-331 MuiTableCell-paddingDefault-334"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-325"
        >
          <td
            className="MuiTableCell-root-331 withStyles-TableCell--root-330 MuiTableCell-paddingDefault-334"
          >
            totalSharesValue
          </td>
          <td
            className="MuiTableCell-root-331 withStyles-TableCell--root-330 MuiTableCell-paddingDefault-334"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $774.93
          </td>
        </tr>
      </tbody>
    </table>
    <button
      className="MuiButtonBase-root-52 MuiButton-root-86 MuiButton-raised-93"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-88"
      >
        Sell Shares
      </span>
      <span
        className="MuiTouchRipple-root-55"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots StockGraph Playground 1`] = `
<div
  className="my-pretty-chart-container"
>
  <div
    id="chart"
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <div>
      Rendering Chart
    </div>
  </div>
</div>
`;
